# jinja-psycopg

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: run-tests.yml
docs/: gen_ref_pages.py
jinja_psycopg/: __init__.py  context.py  extension.py  renderer.py  sql.py
reference/SUMMARY/: index.html
reference/jinja_psycopg/__init__/: index.html
reference/jinja_psycopg/context/: index.html
reference/jinja_psycopg/extension/: index.html
reference/jinja_psycopg/renderer/: index.html
reference/jinja_psycopg/sql/: index.html
search/: search_index.json
tests/: test_renderer.py
