[project]
name = "jinja-psycopg"
version = "0.1.0"
description = ""
authors = [
    {name = "snorkysnark", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "jinja2>=3.1.2",
    "psycopg>=3.0.15",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
