[project]
name = "jinja-psycopg"
version = "0.1.4"
description = "Bridge between the jinja templating engine and psycopg3's type-aware formatting"
authors = [
    {name = "snorkysnark", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "jinja2>=3.1.2",
    "psycopg>=3.0.15",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-material>=9.2.6",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-include-markdown-plugin>=3.9.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
